clang/test/BSC/Negative/SafeZone/identical_declspec/identical_declspec_future_copy.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s
// REQUIRES: ENABLE_BSC_FUTURE

_Unsafe int add(int x, int y); // expected-note {{previous declaration is here}}
_Safe int add(int x, int y) {  // expected-error {{conflicting types for 'add'}}
  return x + y;
}

_Safe int g_a;   // expected-error {{'_Safe' can only appear before on function or statement or parenthesized expression}}
_Safe struct b {  // expected-error {{'_Safe' can only appear before on function or statement or parenthesized expression}}
  int a;
};
_Safe enum c {   // expected-error {{'_Safe' can only appear before on function or statement or parenthesized expression}}
  TA,
  TB,
  TC
};

_Unsafe int (*pp)(int x, int y); // expected-note {{previous definition is here}}
_Safe int (*pp)(int x, int y);  // expected-error {{redefinition of 'pp' with a different type: '_Safe int (*)(int, int)' vs 'int (*)(int, int)'}}

_Safe int safun(int x, int y) {
  return 0;
}
_Unsafe int unfun(int x, int y) {
  return 0;
}
int fun(int x, int y) {
  return 0;
}

_Safe int (*sapfun)(int x, int y);
_Unsafe int (*unpfun)(int x, int y);
int (*pfun)(int x, int y);

int main() {
  _Unsafe int (*qq)(int x, int y); // expected-note {{previous definition is here}}
  _Safe int (*qq)(int x, int y);   // expected-error {{redefinition of 'qq' with a different type: '_Safe int (*)(int, int)' vs 'int (*)(int, int)'}}
                                  // expected-error@-1 {{uninitialized declarator is forbidden in the safe zone}}

  sapfun = safun;
  sapfun = unfun;   // expected-error {{incompatible function pointer types assigning to '_Safe int (*)(int, int)' from 'int (int, int)'}}
  sapfun = fun;     // expected-error {{incompatible function pointer types assigning to '_Safe int (*)(int, int)' from 'int (int, int)'}}

  unpfun = safun;   // expected-warning {{incompatible function pointer types assigning to 'int (*)(int, int)' from '_Safe int (int, int)'}}
  unpfun = unfun;
  unpfun = fun;

  pfun = safun;     // expected-warning {{incompatible function pointer types assigning to 'int (*)(int, int)' from '_Safe int (int, int)'}}
  pfun = unfun;
  pfun = fun;

_Safe {
  // When ENABLE_BSC_FUTURE is on, modifying global variables is forbidden
  unpfun = safun;   // expected-error {{modifying global variable is forbidden in the safe zone}}
  unpfun = unfun;   // expected-error {{modifying global variable is forbidden in the safe zone}}
  unpfun = fun;     // expected-error {{modifying global variable is forbidden in the safe zone}}
}

return 0;
}
